# platformer-experiment

./: .gitignore  flake.nix  fourmolu.yaml  platformer.cabal  test.world
src-exe/: Main.hs
src-lib/Platformer/: ECS.hs  Main.hs  Tiles.hs  World.hs
src-lib/SDL/: Image.hs  Image.hsc
src-lib/SDL/Image/: Raw.hsc
