cabal-version: 3.4
name:          platformer
version:       0.1.0.0
license:       GPL-3.0-or-later
license-file:  LICENSE
author:        Johannes Maier
maintainer:    johannes.maier@mailbox.org
category:      Game
build-type:    Simple

common general-options
  ghc-options:
    -threaded -haddock -Wall -Werror=incomplete-patterns
    -Werror=missing-fields -Wunused-packages

library
  import:            general-options
  exposed-modules:
    Platformer.Main
    SDL.Image

  pkgconfig-depends: SDL2_image
  build-depends:
    , base
    , safe-exceptions
    , sdl2

  hs-source-dirs:    src-lib
  default-language:  GHC2021

executable platformer
  import:           general-options
  main-is:          Main.hs
  build-depends:
    , base
    , platformer

  hs-source-dirs:   src-exe
  default-language: GHC2021

test-suite platformer-test
  import:           general-options
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , platformer
